Fix css spacing

--- a/css/main.css
+++ b/css/main.css
@@ -134,14 +134,11 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0;
   }
 
   .h1 {
     text-align: left;
-  }
-
-  .nav {
-    padding: 0;
   }
 
   ul {
